--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.title {
+  text-align: center;
 }
 
 .App-header {
@@ -15,8 +15,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #09d3ac;
 }
